k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
      app: node-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hello
spec:
  selector:
    matchLabels:
      app: node-hello
  replicas: 1
  template:
    metadata:
      labels:
        app: node-hello
    spec:
      containers:
      - name: node-hello
        image: lukyhenry/hello-world
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
